Add test for VCF display mode